doing fancy stuff

--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -76,7 +76,7 @@ filter(litters_data, gd0_weight+gd18_weight>70)
 #what if there are missing values?
 # don't do this filter(litters_data, !is.na(gd0_weight))
 
-#recommends this:
+#recommends this for dropping missing values
 drop_na(litters_data)
 ```
 
@@ -101,4 +101,54 @@ arrange(litters_data, pups_born_alive)
 arrange(litters_data, desc(pups_born_alive))
 ```
 
+##piping...
+
+```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = 
+  mutate(
+    litters_data_selected_cols, 
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group))
+litters_data_with_vars_without_missing = 
+  drop_na(litters_data_with_vars, wt_gain)
+litters_data_with_vars_without_missing
+
+#nesting. not the way to go
+litters_data_clean = 
+  drop_na(
+    mutate(
+      select(
+        janitor::clean_names(
+          read_csv("./data/FAS_litters.csv", col_types = "ccddiiii")
+          ), 
+      -pups_survive
+      ),
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)
+    ),
+  wt_gain
+  )
+```
+the better way to go/combine all of it
+shift+command+m = %>5
+```{r}
+litters_data = 
+  read_csv("./data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  select(-pups_survive) %>% 
+  mutate(
+    wt_gain=gd18_weight - gd0_weight,
+    group= str_to_lower(group)) %>% 
+  drop_na(gd0_weight)
+```
+
+```{r, eval=FALSE}
+litters_data %>%  view()
+
+litters_data %>% pull(gd0_weight) %>% mean
+```
 
